--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "name": "cobutech_industry",
   "version": "1.0.0",
-  "description": "",
-  "main": "server/server.js",
+  "description": "Overall project for Cobu-Tech Industry",
   "scripts": {
-    "start-server": "server/server.js"
+    "start-server": "node server/server.js",
+    "dev-server": "nodemon  server/server.js"
+   
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "cobu-tech",
+    "industry",
+    "web"
+  ],
+  "author": "COBU-TECH INDUSTRY",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0"
+   
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+   
+  }
 }
