--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://calvinonyango965:0p7r4o5d@cluster0.vm1cnlz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://calvinonyango965:4amXyTGy4OQUI5Dh@cluster0.4syop9q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
