--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://calvinonyango965:4amXyTGy4OQUI5Dh@cluster0.4syop9q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://calvinonyango963:31HtcERwICWj6MbH@cluster0.qcpjg0y.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
